Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_DestroyConstructedComponents(AActor* Self)
	{
		Self->DestroyConstructedComponents();
	}
	DOTNET_EXPORT auto E_AActor_Destroyed(AActor* Self)
	{
		Self->Destroyed();
	}
	DOTNET_EXPORT auto E_AActor_DestroyNetworkActorHandled(AActor* Self)
	{
		return Self->DestroyNetworkActorHandled();
	}
	DOTNET_EXPORT auto E_AActor_DetachAllSceneComponents(AActor* Self, USceneComponent* InParentComponent, INT_PTR DetachmentRules)
	{
		auto _p0 = InParentComponent;
		auto& _p1 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachAllSceneComponents(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_DetachFromActor(AActor* Self, INT_PTR DetachmentRules)
	{
		auto& _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromActor(_p0);
	}
	DOTNET_EXPORT auto E_AActor_DetachRootComponentFromParent(AActor* Self, bool bMaintainWorldPosition)
	{
		auto _p0 = bMaintainWorldPosition;
		Self->DetachRootComponentFromParent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_DisableComponentsSimulatePhysics(AActor* Self)
	{
		Self->DisableComponentsSimulatePhysics();
	}
	DOTNET_EXPORT auto E_AActor_DisableInput(AActor* Self, APlayerController* PlayerController)
	{
		auto _p0 = PlayerController;
		Self->DisableInput(_p0);
	}
	DOTNET_EXPORT auto E_AActor_DispatchBeginPlay(AActor* Self)
	{
		Self->DispatchBeginPlay();
	}
	DOTNET_EXPORT auto E_AActor_DispatchBlockingHit(AActor* Self, UPrimitiveComponent* MyComp, UPrimitiveComponent* OtherComp, bool bSelfMoved, INT_PTR Hit)
	{
		auto _p0 = MyComp;
		auto _p1 = OtherComp;
		auto _p2 = bSelfMoved;
		auto& _p3 = *(FHitResult*)Hit;
		Self->DispatchBlockingHit(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_EnableInput(AActor* Self, APlayerController* PlayerController)
	{
		auto _p0 = PlayerController;
		Self->EnableInput(_p0);
	}
	DOTNET_EXPORT auto E_AActor_EndViewTarget(AActor* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->EndViewTarget(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ExchangeNetRoles(AActor* Self, bool bRemoteOwner)
	{
		auto _p0 = bRemoteOwner;
		Self->ExchangeNetRoles(_p0);
	}
	DOTNET_EXPORT auto E_AActor_FinishAndRegisterComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->FinishAndRegisterComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_FlushNetDormancy(AActor* Self)
	{
		Self->FlushNetDormancy();
	}
	DOTNET_EXPORT auto E_AActor_ForceNetRelevant(AActor* Self)
	{
		Self->ForceNetRelevant();
	}
	DOTNET_EXPORT auto E_AActor_ForceNetUpdate(AActor* Self)
	{
		Self->ForceNetUpdate();
	}
	DOTNET_EXPORT auto E_AActor_ForcePropertyCompare(AActor* Self)
	{
		Self->ForcePropertyCompare();
	}
	DOTNET_EXPORT auto E_AActor_GatherCurrentMovement(AActor* Self)
	{
		Self->GatherCurrentMovement();
	}
	DOTNET_EXPORT auto E_AActor_GetActorBounds(AActor* Self, bool bOnlyCollidingComponents, INT_PTR Origin, INT_PTR BoxExtent)
	{
		auto _p0 = bOnlyCollidingComponents;
		auto& _p1 = *(FVector*)Origin;
		auto& _p2 = *(FVector*)BoxExtent;
		Self->GetActorBounds(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_GetActorEnableCollision(AActor* Self)
	{
		return Self->GetActorEnableCollision();
	}
	DOTNET_EXPORT auto E_AActor_GetActorEyesViewPoint(AActor* Self, INT_PTR OutLocation, INT_PTR OutRotation)
	{
		auto& _p0 = *(FVector*)OutLocation;
		auto& _p1 = *(FRotator*)OutRotation;
		Self->GetActorEyesViewPoint(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_GetActorForwardVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorForwardVector());
	}
	DOTNET_EXPORT auto E_AActor_GetActorLocation(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorLocation());
	}
	DOTNET_EXPORT auto E_AActor_GetActorQuat(AActor* Self)
	{
		return (INT_PTR) new FQuat(Self->GetActorQuat());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRelativeScale3D(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorRelativeScale3D());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRightVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorRightVector());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRotation(AActor* Self)
	{
		return (INT_PTR) new FRotator(Self->GetActorRotation());
	}
	DOTNET_EXPORT auto E_AActor_GetActorScale(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorScale());
	}
	DOTNET_EXPORT auto E_AActor_GetActorScale3D(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorScale3D());
	}
	DOTNET_EXPORT auto E_AActor_GetActorTickInterval(AActor* Self)
	{
		return Self->GetActorTickInterval();
	}
	DOTNET_EXPORT auto E_AActor_GetActorTimeDilation(AActor* Self)
	{
		return Self->GetActorTimeDilation();
	}
	DOTNET_EXPORT auto E_AActor_GetActorTimeDilation_o1(AActor* Self, UWorld& ActorWorld)
	{
		auto& _p0 = ActorWorld;
		return Self->GetActorTimeDilation(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetActorTransform(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->GetActorTransform());
	}
	DOTNET_EXPORT auto E_AActor_GetActorUpVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorUpVector());
	}
	DOTNET_EXPORT auto E_AActor_GetAllChildActors(AActor* Self, INT_PTR ChildActors, bool bIncludeDescendants)
	{
		auto& _p0 = *(TArray<AActor*>*)ChildActors;
		auto _p1 = bIncludeDescendants;
		Self->GetAllChildActors(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_GetAttachedActors(AActor* Self, INT_PTR OutActors)
	{
		auto& _p0 = *(TArray<AActor*>*)OutActors;
		Self->GetAttachedActors(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetAttachParentActor(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetAttachParentActor());
	}
	DOTNET_EXPORT auto E_AActor_GetAttachParentSocketName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetAttachParentSocketName());
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsBoundingBox(AActor* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->GetComponentsBoundingBox(_p0));
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsBoundingCylinder(AActor* Self, float CollisionRadius, float CollisionHalfHeight, bool bNonColliding)
	{
		auto& _p0 = CollisionRadius;
		auto& _p1 = CollisionHalfHeight;
		auto _p2 = bNonColliding;
		Self->GetComponentsBoundingCylinder(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsCollisionResponseToChannel(AActor* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetComponentsCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetDebugName(AActor* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		return ConvertToManage_StringWrapper(Self->GetDebugName(_p0));
	}
	DOTNET_EXPORT auto E_AActor_GetDefaultAttachComponent(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetDefaultAttachComponent());
	}
	DOTNET_EXPORT auto E_AActor_GetDistanceTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetDistanceTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetDotProductTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetDotProductTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetGameTimeSinceCreation(AActor* Self)
	{
		return Self->GetGameTimeSinceCreation();
	}
	DOTNET_EXPORT auto E_AActor_GetHorizontalDistanceTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetHorizontalDistanceTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetHorizontalDotProductTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetHorizontalDotProductTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetHumanReadableName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetHumanReadableName());
	}
	DOTNET_EXPORT auto E_AActor_GetInputAxisValue(AActor* Self, char* InputAxisName)
	{
		auto _p0 = ConvertFromManage_FName(InputAxisName);
		return Self->GetInputAxisValue(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetInstanceComponents(AActor* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetInstanceComponents());
	}
	DOTNET_EXPORT auto E_AActor_GetInstigator(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetInstigator());
	}
	DOTNET_EXPORT auto E_AActor_GetInstigatorController(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetInstigatorController());
	}
	DOTNET_EXPORT auto E_AActor_GetIsReplicated(AActor* Self)
	{
		return Self->GetIsReplicated();
	}
	DOTNET_EXPORT auto E_AActor_GetLastRenderTime(AActor* Self)
	{
		return Self->GetLastRenderTime();
	}
	DOTNET_EXPORT auto E_AActor_GetLifeSpan(AActor* Self)
	{
		return Self->GetLifeSpan();
	}
	DOTNET_EXPORT auto E_AActor_GetLocalRole(AActor* Self)
	{
		return Self->GetLocalRole();
	}
	DOTNET_EXPORT auto E_AActor_GetNetDriverName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetNetDriverName());
	}
	DOTNET_EXPORT auto E_AActor_GetNetMode(AActor* Self)
	{
		return Self->GetNetMode();
	}
	DOTNET_EXPORT auto E_AActor_GetNetOwner(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetNetOwner());
	}
	DOTNET_EXPORT auto E_AActor_GetNetOwningPlayer(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetNetOwningPlayer());
	}
	DOTNET_EXPORT auto E_AActor_GetOverlappingComponents(AActor* Self, INT_PTR OverlappingComponents)
	{
		auto& _p0 = *(TArray<UPrimitiveComponent*>*)OverlappingComponents;
		Self->GetOverlappingComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetOwner(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetOwner());
	}
	DOTNET_EXPORT auto E_AActor_GetParentActor(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetParentActor());
	}